--- a/front/package.json
+++ b/front/package.json
@@ -33,5 +33,8 @@
     "vite-plugin-vue-devtools": "^7.7.7",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.10"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
