--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,4 @@ sqlmodel==0.0.8
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-jwt==4.0.0 
+PyJWT==2.8.0 
