--- a/nginx.conf
+++ b/nginx.conf
@@ -13,14 +13,14 @@ http {
 
         # 前端静态资源
         location / {
-            root   /app/front/dist;
+            root   /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
             index  index.html;
         }
 
         # 后端API代理
         location /api/ {
-            proxy_pass http://127.0.0.1:40000/api/;
+            proxy_pass http://backend:40000/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,7 +29,7 @@ http {
 
         # 用户上传的html文件访问
         location /html/ {
-            proxy_pass http://127.0.0.1:40000/html/;
+            proxy_pass http://backend:40000/html/;
         }
     }
 } 
