--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,11 @@ http {
 
         # 用户上传的html文件访问
         location /html/ {
-            proxy_pass http://backend:40000/html/;
+            proxy_pass http://backend:40000/api/html/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 } 
