--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - ./data:/app/data
       - ./html_files:/app/html_files
       - ./uploads:/app/uploads
+    environment:
+      - HTML_DIR=/app/html_files
+      - UPLOAD_DIR=/app/uploads
     command: uvicorn main:app --host 0.0.0.0 --port 40000
     working_dir: /app/backend
     expose:
