--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.3",
     "vue": "^3.4.0",
     "vue-router": "^4.5.1"
@@ -23,13 +24,13 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.15.32",
-    "@vitejs/plugin-vue": "^4.3.0",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "jsdom": "^26.1.0",
     "npm-run-all2": "^8.0.4",
     "typescript": "~5.8.0",
-    "vite": "^4.3.0",
+    "vite": "^6.3.5",
     "vite-plugin-vue-devtools": "^7.7.7",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.10"
