--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   backend:
     image: qianye60/htmlproxy-backend:latest
@@ -22,6 +21,8 @@ services:
       - backend
     networks:
       - app-network
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
 
 networks:
   app-network:
